# sentence-topology

./: .gitattributes  .gitignore  README.md  pyproject.toml  visualization.ipynb
clustering/: .clusters.py.swp  README.md  all.attr.clusters  all.clusters  all.sil.clusters  bow_limited.tsv.free  clusters.py  clusters.sh  doc2vec-cs-vecsize-512-train-1M-sents.tsv.free  doc2vec_vsize_100.tsv.clusters  doc2vec_vsize_100.tsv.free  doc2vec_vsize_2.tsv.clusters  doc2vec_vsize_256.tsv.clusters  doc2vec_vsize_256.tsv.seed_subtracted  doc2vec_vsize_3.tsv.clusters  mixup_all_doc2vec-cs-vecsize-512-train-1M-sents.tsv.clusters  mixup_all_doc2vec_vsize_10.tsv.clusters  mixup_all_doc2vec_vsize_100.tsv.clusters  mixup_all_doc2vec_vsize_2.tsv.clusters  mixup_all_doc2vec_vsize_256.tsv.clusters  mixup_all_doc2vec_vsize_3.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2_supervised_0.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2_supervised_1.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2_supervised_2.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2_supervised_3.tsv.clusters  mixup_all_paraphrase-multilingual-MiniLM-L12-v2_supervised_4.tsv.clusters  mixup_by_seed_doc2vec-cs-vecsize-512-train-1M-sents.tsv.clusters  mixup_by_seed_doc2vec_vsize_10.tsv.clusters  mixup_by_seed_doc2vec_vsize_10.tsv.free  mixup_by_seed_doc2vec_vsize_100.tsv.clusters  mixup_by_seed_doc2vec_vsize_100.tsv.free  mixup_by_seed_doc2vec_vsize_2.tsv.clusters  mixup_by_seed_doc2vec_vsize_256.tsv.clusters  mixup_by_seed_doc2vec_vsize_3.tsv.clusters  mixup_by_seed_doc2vec_vsize_3.tsv.free  mixup_by_seed_paraphrase-multilingual-MiniLM-L12-v2.tsv.clusters  mixup_by_seed_paraphrase-multilingual-MiniLM-L12-v2_supervised_0.tsv.clusters  mixup_by_seed_paraphrase-multilingual-MiniLM-L12-v2_supervised_1.tsv.clusters  mixup_by_seed_paraphrase-multilingual-MiniLM-L12-v2_supervised_2.tsv.clusters  (+12 more)
data/: COSTRA1.1.tsv  README.md
embeddings/: bow_all.tsv  doc2vec_vsize_10.tsv  doc2vec_vsize_2.tsv  doc2vec_vsize_3.tsv  mixup_all_doc2vec_vsize_10.tsv  mixup_all_doc2vec_vsize_2.tsv  mixup_all_doc2vec_vsize_3.tsv  mixup_by_seed_doc2vec_vsize_10.tsv  mixup_by_seed_doc2vec_vsize_2.tsv  (+2 more)
(+282 files in other folders)
