[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sentence_topology"
version = "0.0.1"
authors = [
  # Add yourself here...
  {name = "David Burian", email = "david.burian@me.com"},
  {name = "Leixin Zhang", email = "lzhang1@tcd.ie"},
]
dependencies = [
  "sentence-transformers",
  "pandas",
  "numpy",
  "scikit-learn",
  "seaborn",
  "torch",
  "matplotlib",
  "tensorboard",
]


[project.scripts]
sent-transformer-embedding = "sentence_topology.scripts.sent_transformer_embedding:main"
bow-embedding = "sentence_topology.scripts.bow_embedding:main"
update-cls-gs = "sentence_topology.scripts.update_cls_gs:main"


[project.urls]
homepage = "https://github.com/johnvojtech/sentence-topology"
repository = "https://github.com/johnvojtech/sentence-topology"
